--- a/DBZ-App/Views/DetailCharacterVC.xib
+++ b/DBZ-App/Views/DetailCharacterVC.xib
@@ -12,6 +12,7 @@
                 <outlet property="imgCharacter" destination="hup-cT-67n" id="AGB-aI-TLo"/>
                 <outlet property="lblDescription" destination="kN6-nP-b2F" id="sOU-QD-HTS"/>
                 <outlet property="lblName" destination="IYD-qf-5xJ" id="DgI-de-D8H"/>
+                <outlet property="lblPlanet" destination="24g-bI-DDv" id="Yts-rD-kih"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,20 +22,26 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hup-cT-67n">
-                    <rect key="frame" x="0.0" y="79" width="393" height="400"/>
+                    <rect key="frame" x="0.0" y="99" width="393" height="400"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="400" id="KWc-I8-8Xk"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYD-qf-5xJ">
-                    <rect key="frame" x="20" y="494" width="353" height="25"/>
+                    <rect key="frame" x="20" y="514" width="353" height="25"/>
                     <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="22"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kN6-nP-b2F">
-                    <rect key="frame" x="20" y="529" width="353" height="20.333333333333371"/>
+                    <rect key="frame" x="20" y="549" width="353" height="20.333333333333371"/>
                     <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="18"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24g-bI-DDv">
+                    <rect key="frame" x="324" y="64" width="49" height="23"/>
+                    <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="20"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -43,12 +50,14 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kN6-nP-b2F" secondAttribute="trailing" constant="20" id="1tc-WY-6L3"/>
-                <constraint firstItem="hup-cT-67n" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="3ux-k9-5b6"/>
+                <constraint firstItem="hup-cT-67n" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="40" id="3ux-k9-5b6"/>
                 <constraint firstItem="IYD-qf-5xJ" firstAttribute="top" secondItem="hup-cT-67n" secondAttribute="bottom" constant="15" id="53H-8d-QaV"/>
                 <constraint firstItem="kN6-nP-b2F" firstAttribute="top" secondItem="IYD-qf-5xJ" secondAttribute="bottom" constant="10" id="6Qw-lY-Fc1"/>
+                <constraint firstItem="24g-bI-DDv" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="5" id="9IQ-2R-3Qu"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="hup-cT-67n" secondAttribute="trailing" id="9aI-Ej-YjS"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="kN6-nP-b2F" secondAttribute="bottom" constant="50" id="JJy-EK-tfF"/>
                 <constraint firstItem="kN6-nP-b2F" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="UI8-Nz-aCA"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="24g-bI-DDv" secondAttribute="trailing" constant="20" id="dXo-uU-0Ml"/>
                 <constraint firstItem="hup-cT-67n" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="r7h-Vb-MuC"/>
                 <constraint firstItem="IYD-qf-5xJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="rue-qn-jan"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="IYD-qf-5xJ" secondAttribute="trailing" constant="20" id="uaY-0z-dx7"/>
